--- a/css/themes/mono.css
+++ b/css/themes/mono.css
@@ -45,8 +45,7 @@
 }
 
 /* Mono · light */
-[data-template="mono"][data-theme="erplora-light"],
-[data-template="mono"]:not([data-theme]) {
+[data-template="mono"][data-theme="erplora-light"] {
   --ok-bg:    #FFFFFF;
   --ok-bg-1:  #FAFAFA;            /* gray-50 */
   --ok-bg-2:  #FFFFFF;
